--- a/docs/src/main/asciidoc/index.adoc
+++ b/docs/src/main/asciidoc/index.adoc
@@ -4,6 +4,7 @@
 :image-width: 500
 :book-root: ../../../..
 :rest-application: /rest/src/main/java/bookmarks/Application.java
+:rest-application-test: /rest/src/test/java/bookmarks/BookmarkRestControllerTest.java
 :hateoas-application: /hateoas/src/main/java/bookmarks/Application.java
 :security-application: /security/src/main/java/bookmarks/Application.java
 
@@ -158,8 +159,27 @@ Spring MVC natively supports file uploads via controller arguments of type `Mult
 Spring MVC makes it easy to write service-oriented code whose shape is untainted by `HttpServlet` APIs.
 This code can be easily unit tested, extended through Spring AOP. We'll look at how to unit test these Spring MVC components in the next section.
 
-#### Testing a REST Service
-// todo general purpose information on testing REST endponts 
+### Using HTTP to signal Errors 
+ 
+
+All the methods in the REST service call `validateUser` which in turn verifies that the user in question exists and - if it doesn't - throws a `UserNotFoundException`. The definition of this exception is shown. It's annotated with a Spring MVC `@ResponseStatus(HttpStatus.NOT_FOUND)` which tells Spring MVC to send back an HTTP status code (404) whenever this exception is triggered. This is a _really_ nice arrangement: you can think in terms of your business domain in your code _and_ you get smart handling that maps nicely to how HTTP signals erros to the client, using status codes. Spring MVC provides a _lot_ of different places to cleanly https://spring.io/blog/2013/11/01/exception-handling-in-spring-mvc[layer in generic, application-global and controller-local error handling logic]. 
+
+
+###  Testing a REST Service
+
+Spring MVC provides great support http://docs.spring.io/spring-framework/docs/current/spring-framework-reference/html/testing.html#spring-mvc-test-framework[for unit testing HTTP endpoints]. It provides a very nice middle ground between unit-testing and integration-testing in that it lets you stand up the entire Spring MVC `DispatcherServlet`-based machinery - including validators, `HttpMessageConverter` s, and more - and then run tests against them _without_ actually starting up a _real_ HTTP service: the best of both worlds! It's an integration-test in that the logic you care about is actually being exercised, but it's a unit-test in that you're not actually waiting for a web server to initialize and start servicing requests. 
+
+Here's the unit-test for the `ReservationRestController`, in `{rest-application-test}`. This should look familiar to anybody who has written a JUnit unit test before. At the top, we use the `@SpringApplicationConfiguration(classes = Application.class)` annotation (from Spring Boot) to tell the `SpringJUnit4ClassRunner` where it should get information about the Spring application under test. The `@WebAppConfiguration` annotation tells JUnit that this is a unit test for Spring MVC web components and should thus run under a `WebApplicationContext` variety, not a standard `ApplicationContext` implementation.
+
+
+[source,java] 
+---- 
+include::{book-root}{rest-application-test}[]
+----   
+ 
+The first thing to look at is this `@Before`-annotated `setup` method. The first thing the `setup` method does is instantiate a  `MockMvc`  which requires a reference to the applicaton's `WebApplicationContext`. The `MockMvc` is the center piece: all tests will invariably go through the `MockMvc` type to mock HTTP requests against the service. And... that's it! Look at any of the various tests. We can use the static imports on `org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*` to chain together HTTP requests and verify the responses.  
+
+All tests specify a `application/json` `content-type` and expect responses of that `content-type`, as well. The tests use the `MockMvcResultMatchers#jsonPath` method to validate the structure and contents of the JSON responses. This, in turn, uses the Jayway JSON Path API to run X-Path-style traversals on JSON structures, as we do in various places in the unit tests.
 
 
 
@@ -171,8 +191,8 @@ This code can be easily unit tested, extended through Spring AOP. We'll look at 
 
 The first cut of the API works very well. If this service were well documented, it would be workable for REST clients in many different languages. It is a clean API, in that it takes advantage of some of the primitives that HTTP provides, in a well-understood way. One measure of an API is by its compliance with  the http://en.wikipedia.org/wiki/Representational_state_transfer#Uniform_interface[uniform interface principle]. HTTP REST APIs like the one we have so far stack up pretty well. Each message includes enough information to describe how to process the message. For example, a client might  decide which parser to invoke based on  the `Content-Type` header in the request message. The state in the system is mapped into uniquely identifying resource URIs. State is addressable. Mutations in state are done through known HTTP verbs (`POST`, `GET`, `DELETE`, `PUT`, etc.). Thus, when a client holds a representation of a resource, including any metadata attached, it has enough information to modify or delete the resource.
 
-But, we can do better. The services as they stand are adequate to the task but lack.. *staying power*. <wikipedia> Clients must know the API a priori. Changes in the API break clients and they *break* the documentation about the service.  Hypermedia as the engine of application state (a.k.a. http://en.wikipedia.org/wiki/HATEOAS[**HATEOAS**]) is one more constraint that addresses and removes this coupling.  Clients make state transitions only through actions that are dynamically identified within hypermedia by the server (e.g., by hyperlinks within hypertext). Except for simple fixed entry points to the application, a client does not assume that any particular action is available for any particular resources beyond those described in representations previously received from the server.  
-</wikipedia>
+But, we can do better. The services as they stand are adequate to the task but lack.. *staying power*. As Wikipedia says: Clients must know the API a priori. Changes in the API break clients and they *break* the documentation about the service.  Hypermedia as the engine of application state (a.k.a. http://en.wikipedia.org/wiki/HATEOAS[**HATEOAS**]) is one more constraint that addresses and removes this coupling.  Clients make state transitions only through actions that are dynamically identified within hypermedia by the server (e.g., by hyperlinks within hypertext). Except for simple fixed entry points to the application, a client does not assume that any particular action is available for any particular resources beyond those described in representations previously received from the server.  
+ 
 
 Let's look at a revised cut of this API (in `{hateoas-application}`), this time embracing  HATEOAS with http://spring.io/projects/spring-hateoas[Spring HATEOAS].  It is a slight simplification to say that Spring HATEOAS makes it easy to provide links - metadata about payloads being returned to the client - but that is how we will approach it. Fundamentally, all we will do is *wrap* our response payloads using Spring HATEOAS' `ResourceSupport` type. `ResourceSupport` accumulates `Link` objects which in turn describe useful, related resources. For example, a resource describing an account in an e-commerce solution could have a link to the resource for that account's orders, a link to that account's current shopping cart, and a link that can be used to retrieve that resources state again. 
 
@@ -192,21 +212,7 @@ At a minimum, a resource should provide a link to itself (usually a link whose `
 With this in place, the only remaining changes substitute  `Bookmark` types for `BookmarkResource` types. 
 
 
-##   Error Handling
-// todo talk about vndErrors 
-// todo talk about sending about useful response 
-// todo talk about status codes through @ControllerAdvice
- 
 
-REST APIs are exposed through HTTP. HTTP *is* the contract. It follows that error-handling in a REST API follows the norms of HTTP, as well. There are a few layers that you may introduce error handling in Spring MVC. 
-
-
-### Returning an appropriate Mime-Type - `VndErrors`
-### Send Usable Error Messages 
-
-Remember, error handling is as much about development as production. Human beings - actual people - will rely on the constraints conveyed through helpful error messages to build their clients. Providing useful error messages is a huge way to improve development velocity.
-
-### Generic Error Handling with `@ControllerAdvice` 
 
 ## Securing a REST Service   
 
@@ -258,12 +264,4 @@ include::{book-root}{security-application}[]
 
 
 // TODO: talk about storing Access Tokens in a single store that multiple client nodes use for federated ID in mind. Then show how you can use Spring Boot's autoconfiguration approach to share across an organization's services w/ no configuration apart from `@EnableAutoConfiguration`. Show an example of Spring Security OAuth persiting to Redis or something more horizontally scalable than a SQL DB.    
-
-
-#### Testing a Secure REST Service
-// Sometimes Rob Winch has to help put out fires, rescue cats from trees, lead/develop/release one of his 50 or so amazing projects and - ever so infrequently - eat or sleep. Im sure he'd probably help us with this section, too, though. He's busy. But not Rob-busy.  
-
-## Consuming an OAuth REST Service 
-
-
 
